# denoise

./: .gitignore  main.py  pyproject.toml  requirements.txt  webapp.py
backend/: pyproject.toml  webapp.py
be/: Dockerfile  be.sln  fly.toml
be/API/: Program.cs  appsettings.json
be/API/Controllers/: PredictionController.cs
be/API/Startup/: RegisterHttpClientsStartup.cs  RegisterServicesStartup.cs
be/Application/: Application.csproj
be/Application/Extensions/: ServiceReturnExtensions.cs
be/Application/Services/: PredictionService.cs
be/Domain/: Domain.csproj
denoise/: __init__.py
denoise/models/: __init__.py  torchscript.py  unet.py
fe/: index.html  mediaqueries.css  package-lock.json  package.json  style.css
fe/public/: index.html
fe/src/: App.tsx  globalStyles.css  index.tsx
fe2/: package-lock.json  package.json
fe2/public/: index.html  manifest.json
fe2/src/: App.tsx  globalStyles.css  index.tsx
fe_bak/: package-lock.json  package.json
fe_bak/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
fe_bak/app/: globals.css  page.tsx
frontend/: .env.development.template  .env.production.template  package-lock.json  package.json
models/: noise.py  unet.py
notes/: 0.txt  shot-noise.txt
pages/: homepage.py  image_manipulator.py
scripts/: apply_noise.py  apply_noise_torch.py  infer.py  train.py
webapp/: main.py
webapp/pages/: homepage.py
(+115 files in other folders)
